force-app/main/default/objects/My_Offer__c/My_Offer__c.object-meta.xml
<CustomObject>
    <label>My Offer</label>
    <nameField>
        <label>My Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>