force-app/main/default/objects/My_Offer__c/fields/Date_of_Discard__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Discard__c</fullName>
    <label>Date of Discard</label>
    <type>Date</type>
</CustomField>