force-app/main/default/objects/My_Offer__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <label>Date To</label>
    <type>DateTime</type>
</CustomField>