force-app/main/default/objects/My_Offer__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <type>TextArea</type>
</CustomField>