force-app/main/default/objects/My_Offer__c/fields/Tag_1__c.field-meta.xml
<CustomField>
    <fullName>Tag_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tag 1</label>
    <referenceTo>Offer_Tag__c</referenceTo>
    <relationshipLabel>My Offers</relationshipLabel>
    <relationshipName>My_Offers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>