force-app/main/default/objects/My_Offer__c/fields/Tag_2__c.field-meta.xml
<CustomField>
    <fullName>Tag_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tag 2</label>
    <referenceTo>Offer_Tag__c</referenceTo>
    <relationshipLabel>My Offers (Tag 2)</relationshipLabel>
    <relationshipName>My_Offers1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>