force-app/main/default/objects/My_Offer__c/fields/Tag_3__c.field-meta.xml
<CustomField>
    <fullName>Tag_3__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tag 3</label>
    <referenceTo>Offer_Tag__c</referenceTo>
    <relationshipLabel>My Offers (Tag 3)</relationshipLabel>
    <relationshipName>My_Offers2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>